@@ -21,7 +21,7 @@
 {
 
 #if DEBUG_ALLOC
-    NSLog(@"%s(%d):-[PTYScrollView dealloc");
+    NSLog(@"%s(%d):-[PTYScrollView dealloc", __FILE__, __LINE__);
 #endif
     
     [super dealloc];
